--- a/deck_builder.html
+++ b/deck_builder.html
@@ -105,7 +105,7 @@
 
     .card-gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
       gap: 12px;
     }
 
@@ -122,9 +122,44 @@
     }
 
     .card-item img {
-      width: 100%;
+      width: 110px;
       border-radius: 4px;
-      margin-bottom: 6px;
+      cursor: zoom-in;
+      background-color: #fff;
+      border: 1px solid #ddd;
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+      gap: 12px;
+    }
+
+    .card-box {
+      display: flex;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 1px;
+      background: #fff;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .card-box:hover {
+      background: #f0f0f0;
+    }
+
+    .card-info {
+      flex-grow: 1;
+      font-size: 1px;
+      line-height: 1.5;
+    }
+
+    .card-box img {
+      width: 80px;
+      border-radius: 4px;
+      margin-right: 4px;
+      object-fit: cover;
     }
 
     .filter-group {
@@ -201,65 +236,6 @@
     body.dark .chip.selected {
       background-color: #007acc;
       color: #fff;
-    }
-
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 12px;
-    }
-
-    .card-box {
-      display: flex;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 6px;
-      background: #fff;
-      align-items: center;
-      cursor: pointer;
-    }
-
-    .card-box:hover {
-      background: #f0f0f0;
-    }
-
-    .card-info {
-      flex-grow: 1;
-      font-size: 14px;
-      line-height: 1.5;
-    }
-
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 12px;
-    }
-
-    .card-box {
-      display: flex;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 6px;
-      background: #fff;
-      align-items: center;
-      cursor: pointer;
-    }
-
-    .card-box:hover {
-      background: #f0f0f0;
-    }
-
-    .card-box img {
-      width: 100px;
-      border-radius: 4px;
-      margin-right: 10px;
-      object-fit: cover;
-    }
-
-    .card-info {
-      flex-grow: 1;
-      font-size: 14px;
-      line-height: 1.5;
     }
 
     .mobile-layout .card-grid {
