--- a/deck_builder.html
+++ b/deck_builder.html
@@ -212,25 +212,32 @@
     }
 
     .mobile-layout .card-grid {
-      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(85px, 1fr));
+      gap: 10px;
     }
 
     .mobile-layout .card-box {
-      flex-direction: column;
+      display: flex;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 1px;
       align-items: center;
+      cursor: pointer;
+      flex-direction: column;
     }
 
     .mobile-layout .card-box img {
-      width: calc((100vw - 32px) / 4);
-      max-width: 95px;
-      margin: 0.2px;
+      width: 80px;
+      border-radius: 4px;
+      margin-right: 4px;
+      object-fit: cover;
     }
 
     .mobile-layout .card-info {
-      text-align: center;
-      font-size: 11.5px;
-      padding: 6px 0;
-      line-height: 1.1;
+      flex-grow: 1;
+      font-size: 9px;
+      line-height: 1.5;
     }
   </style>
 </head>
