--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         ホロライブカード一覧
         <div class="top-nav">
           <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
-          <button onclick="location.href='deck_builder.html'">🧠 デッキビルダー</button>
+          <button onclick="location.href='deck_builder.html'">🧠 デッキ作成</button>
         </div>
       </h2>
 
