--- a/deck_builder.html
+++ b/deck_builder.html
@@ -250,6 +250,40 @@
       font-size: 9px;
       line-height: 1.5;
     }
+
+    .mobile-layout .deck-list {
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      gap: 12px;
+      padding-bottom: 10px;
+    }
+
+    .mobile-layout .deck-box {
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 5px;
+      width: 60px;
+      text-align: center;
+      cursor: pointer;
+      font-size: 13px;
+    }
+
+    .mobile-layout .deck-box:hover {
+      background: #20262e;
+    }
+
+    .mobile-layout .deck-box img {
+      width: 60px;
+      border-radius: 4px;
+      margin-bottom: 6px;
+    }
+
+    .mobile-layout .deck-thumbnail-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+    }
   </style>
 </head>
 <body>
