--- a/deck_builder.html
+++ b/deck_builder.html
@@ -322,6 +322,16 @@
       object-fit: cover;
     }
 
+    .mobile-layout .filter-wrapper {
+      gap: 6px;
+    }
+
+    .mobile-layout .filter-wrapper button {
+      font-size: 12px;
+      padding: 4px 8px;
+      height: auto;
+    }
+
     .mobile-layout #productFilter {
       max-width: 400px;
       font-size: 13px;
