--- a/deck_builder.html
+++ b/deck_builder.html
@@ -726,33 +726,33 @@
 
           const sortedCardIds = sortDeckByTypeAndId(Object.keys(countMap));
           sortedCardIds.forEach(cardId => {
-            Object.entries(countMap).sort().forEach(([cardId, count]) => {
-              const wrapper = document.createElement("div");
-              wrapper.className = "card-thumb";
+            const count = countMap[cardId]; // ✅ 枚数取得
 
-              const card = cards.find(c => c.id === cardId);
-              const img = document.createElement("img");
-              img.src = card?.image ?? `images/${cardId}.png`;
-              img.alt = card?.name ?? cardId;
-              img.onerror = () => { img.src = "images/placeholder.png"; };
-              wrapper.appendChild(img);
+            const wrapper = document.createElement("div");
+            wrapper.className = "card-thumb";
 
-              const badge = document.createElement("div");
-              badge.className = "count-badge";
-              badge.textContent = `×${count}`;
-              wrapper.appendChild(badge);
+            const card = cards.find(c => c.id === cardId);
+            const img = document.createElement("img");
+            img.src = card?.image ?? `images/${cardId}.png`;
+            img.alt = card?.name ?? cardId;
+            img.onerror = () => { img.src = "images/placeholder.png"; };
+            wrapper.appendChild(img);
 
-              const del = document.createElement("div");
-              del.className = "delete-btn";
-              del.textContent = "×";
-              del.onclick = () => {
-                decks[currentDeck] = decks[currentDeck].filter(id => id !== cardId);
-                updateDeckUI();
-              };
-              wrapper.appendChild(del);
+            const badge = document.createElement("div");
+            badge.className = "count-badge";
+            badge.textContent = `×${count}`;
+            wrapper.appendChild(badge);
 
-              list.appendChild(wrapper);
-            });
+            const del = document.createElement("div");
+            del.className = "delete-btn";
+            del.textContent = "×";
+            del.onclick = () => {
+              decks[currentDeck] = decks[currentDeck].filter(id => id !== cardId);
+              updateDeckUI();
+            };
+            wrapper.appendChild(del);
+
+            list.appendChild(wrapper);
           });
           renderDeckList();
           renderCardSelectionGallery();
