debug: new func

--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
         <div class="top-nav">
           <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
           <button onclick="location.href='deck_builder.html'">🧠 デッキ作成</button>
+          <button onclick="location.href='card_scan.html'">test1</button>
+          <button onclick="location.href='deck_photo_import.html'">test2</button>
         </div>
       </h2>
 
