--- a/deck_photo_import.html
+++ b/deck_photo_import.html
@@ -37,63 +37,57 @@
         alert("card_data.json を読み込めませんでした");
       });
 
-    async function scanImageOCR(event) {
-      const file = event.target.files[0];
-      if (!file || !cardData) return;
+      async function scanImageOCR(event) {
+    const file = event.target.files[0];
+    if (!file || !cardData) return;
 
-      const loading = document.getElementById("loading");
-      const result = document.getElementById("result");
-      result.innerHTML = "";
-      loading.textContent = "🔍 OCRでカードIDを読み取り中…";
+    const loading = document.getElementById("loading");
+    const result = document.getElementById("result");
+    result.innerHTML = "";
+    loading.textContent = "🔍 OCRでカードIDを読み取り中…";
 
-      const imageURL = URL.createObjectURL(file);
+    const imageURL = URL.createObjectURL(file);
 
-      try {
+    try {
         const { data: { text } } = await Tesseract.recognize(imageURL, 'eng', {
-          logger: m => console.log(m)
+        logger: m => console.log(m)
         });
 
-        const detected = extractCardId(text);
         loading.textContent = "";
 
+        // ✅ スキャン全文を表示
+        result.innerHTML = `
+        <h4>📄 読み取られたテキスト</h4>
+        <pre style="white-space: pre-wrap; background:#eee; padding:10px;">${text}</pre>
+        `;
+
+        const detected = extractCardId(text);
         if (!detected) {
-          result.innerHTML = `<p class="error">カードIDを検出できませんでした</p>`;
-          return;
+        result.innerHTML += `<p class="error">カードIDを検出できませんでした</p>`;
+        return;
         }
 
         const card = cardData[detected];
         if (!card) {
-          result.innerHTML = `<p class="error">ID一致なし：<code>${detected}</code></p>`;
-          return;
+        result.innerHTML += `<p class="error">ID一致なし：<code>${detected}</code></p>`;
+        return;
         }
 
-        result.innerHTML = `
-          <img src="${card.image_url}" alt="${card.image_alt || card.name}" />
-          <h3>${card.name}</h3>
-          <p>🗂 <strong>${card.card_type}</strong></p>
-          ${card.product ? `<p>📦 ${card.product}</p>` : ""}
-          ${card.rarity ? `<p>🎴 レアリティ：${card.rarity}</p>` : ""}
-          ${card.color ? `<p>🌈 カラー：${card.color}</p>` : ""}
-          ${card.hp ? `<p>❤️ HP：${card.hp}</p>` : ""}
-          ${card.bloom_level ? `<p>🌸 ブルーム：${card.bloom_level}</p>` : ""}
-          ${card.baton_touch ? `<p>🪄 バトンタッチ：${card.baton_touch}</p>` : ""}
-          ${card.tags ? `<p>🏷 タグ：${card.tags.join(", ")}</p>` : ""}
-          <h4>🧠 スキル</h4>
-          <ul>
-            ${(card.skills || []).map(skill => `
-              <li>
-                <strong>${skill.type}</strong>：
-                ${skill.name ? `<em>${skill.name}</em> - ` : ""}
-                ${skill.description || ""}
-              </li>
-            `).join("")}
-          </ul>
+        // ✅ 一致したカード情報を追加表示
+        result.innerHTML += `
+        <h4>🧠 検出結果：${detected}</h4>
+        <img src="${card.image_url}" alt="${card.image_alt || card.name}" />
+        <h3>${card.name}</h3>
+        <p>🗂 <strong>${card.card_type}</strong></p>
+        ${(card.skills || []).map(skill => `
+            <li><strong>${skill.type}</strong>：${skill.name ?? ""} ${skill.description ?? ""}</li>
+        `).join("")}
         `;
-      } catch (err) {
+    } catch (err) {
         loading.textContent = "";
         result.innerHTML = `<p class="error">OCR処理に失敗しました</p>`;
         console.error(err);
-      }
+    }
     }
 
     function extractCardId(text) {
