--- a/deck_photo_import.html
+++ b/deck_photo_import.html
@@ -49,7 +49,7 @@
     const imageURL = URL.createObjectURL(file);
 
     try {
-        const { data: { text } } = await Tesseract.recognize(imageURL, 'eng', {
+        const { data: { text } } = await Tesseract.recognize(imageURL, 'ipn', {
         logger: m => console.log(m)
         });
 
@@ -92,7 +92,7 @@
 
     function extractCardId(text) {
       const lines = text.split(/\r?\n/).map(line => line.trim());
-      const pattern = /h[A-Z]{2,}[0-9]{3}-[0-9]{3}[_A-Z]*[A-Z]/;
+      const pattern = /[hH][A-Z]{2,}[0-9]{3}-[0-9]{3}[_A-Z]{0,3}/;
       for (const line of lines) {
         const match = line.match(pattern);
         if (match) return match[0];
