--- a/deck_photo_import.html
+++ b/deck_photo_import.html
@@ -21,84 +21,101 @@
   <input type="file" accept="image/*" onchange="scanImageOCR(event)" />
   <div id="loading"></div>
   <div id="result" class="preview"></div>
+  <input type="file" accept="image/*" onchange="scanImageAndColor(event)" />
+  <div id="loading"></div>
+  <div id="result" class="preview"></div>
 
   <script>
-    let cardData = {};
+  let cardData = {};
+  fetch('json_file/card_data.json')
+    .then(res => res.json())
+    .then(data => cardData = data);
 
-    // ✅ JSON読み込み
-    fetch('json_file/card_data.json')
-      .then(res => res.json())
-      .then(data => {
-        cardData = data;
-        console.log("✅ card_data.json loaded");
-      })
-      .catch(err => {
-        console.error("❌ Failed to load card_data.json", err);
-        alert("card_data.json を読み込めませんでした");
-      });
-
-      async function scanImageOCR(event) {
+  async function scanImageAndColor(event) {
     const file = event.target.files[0];
-    if (!file || !cardData) return;
+    if (!file) return;
 
     const loading = document.getElementById("loading");
     const result = document.getElementById("result");
     result.innerHTML = "";
-    loading.textContent = "🔍 OCRでカードIDを読み取り中…";
+    loading.textContent = "🔍 画像解析中…";
 
     const imageURL = URL.createObjectURL(file);
+    const img = new Image();
+    img.src = imageURL;
 
-    try {
-        const { data: { text } } = await Tesseract.recognize(imageURL, 'jpn', {
-        logger: m => console.log(m)
-        });
+    img.onload = async () => {
+      // 🔤 OCRでID抽出
+      let detectedId = null;
+      try {
+        const { data: { text } } = await Tesseract.recognize(imageURL, 'jpn');
+        const match = text.match(/h[A-Z]{2,}[0-9]{3}-[0-9]{3}[_A-Z]*/);
+        if (match) detectedId = match[0];
+      } catch {}
 
+      // 🔎 OCR結果が一致すれば表示
+      if (detectedId && cardData[detectedId]) {
+        const card = cardData[detectedId];
         loading.textContent = "";
-
-        // ✅ スキャン全文を表示
-        result.innerHTML = `
-        <h4>📄 読み取られたテキスト</h4>
-        <pre style="white-space: pre-wrap; background:#eee; padding:10px;">${text}</pre>
-        `;
-
-        const detected = extractCardId(text);
-        if (!detected) {
-        result.innerHTML += `<p class="error">カードIDを検出できませんでした</p>`;
+        showCardInfo(card);
         return;
-        }
-
-        const card = cardData[detected];
-        if (!card) {
-        result.innerHTML += `<p class="error">ID一致なし：<code>${detected}</code></p>`;
-        return;
-        }
-
-        // ✅ 一致したカード情報を追加表示
-        result.innerHTML += `
-        <h4>🧠 検出結果：${detected}</h4>
-        <img src="${card.image_url}" alt="${card.image_alt || card.name}" />
-        <h3>${card.name}</h3>
-        <p>🗂 <strong>${card.card_type}</strong></p>
-        ${(card.skills || []).map(skill => `
-            <li><strong>${skill.type}</strong>：${skill.name ?? ""} ${skill.description ?? ""}</li>
-        `).join("")}
-        `;
-    } catch (err) {
-        loading.textContent = "";
-        result.innerHTML = `<p class="error">OCR処理に失敗しました</p>`;
-        console.error(err);
-    }
-    }
-
-    function extractCardId(text) {
-      const lines = text.split(/\r?\n/).map(line => line.trim());
-      const pattern = /[hH][A-Z]{2,}[0-9]{3}-[0-9]{3}[_A-Z]{0,3}/;
-      for (const line of lines) {
-        const match = line.match(pattern);
-        if (match) return match[0];
       }
-      return null;
-    }
+
+      // 🌈 色分類処理（平均色抽出）
+      const canvas = document.createElement("canvas");
+      const ctx = canvas.getContext("2d");
+      canvas.width = img.width;
+      canvas.height = img.height;
+      ctx.drawImage(img, 0, 0);
+      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height).data;
+
+      let r = 0, g = 0, b = 0, count = 0;
+      for (let i = 0; i < imageData.length; i += 4) {
+        r += imageData[i]; g += imageData[i + 1]; b += imageData[i + 2]; count++;
+      }
+      r = Math.round(r / count); g = Math.round(g / count); b = Math.round(b / count);
+
+      const avgColor = `rgb(${r}, ${g}, ${b})`;
+
+      // 🧠 色分類から候補抽出
+      const colorMap = {
+        red: c => c.color === "赤",
+        yellow: c => c.color === "黄",
+        blue: c => c.color === "青",
+        white: c => c.color === "白",
+        purple: c => c.color === "紫"
+      };
+
+      let matchedColor = null;
+      if (r > g && r > b) matchedColor = "red";
+      else if (g > r && g > b) matchedColor = "green";
+      else if (b > r && b > g) matchedColor = "blue";
+      else if (r > 200 && g > 200) matchedColor = "yellow";
+      else matchedColor = "white";
+
+      const candidates = Object.values(cardData).filter(card => colorMap[matchedColor]?.(card));
+      loading.textContent = "";
+
+      result.innerHTML = `<p>🔍 OCRではID検出できませんでした</p><p>🎨 色判定：${avgColor} → ${matchedColor}</p>`;
+      result.innerHTML += `<h4>🔎 色推定による候補カード（${candidates.length}件）</h4><ul>`;
+      candidates.slice(0, 10).forEach(card => {
+        result.innerHTML += `<li><strong>${card.name}</strong> - ${card.color || "?"}</li>`;
+      });
+      result.innerHTML += `</ul>`;
+    };
+  }
+
+  function showCardInfo(card) {
+    const result = document.getElementById("result");
+    result.innerHTML = `
+      <img src="${card.image_url}" alt="${card.name}" />
+      <h3>${card.name}</h3>
+      <p>🗂 ${card.card_type}</p>
+      ${(card.skills || []).map(skill => `
+        <li><strong>${skill.type}</strong>：${skill.name ?? ""} ${skill.description ?? ""}</li>
+      `).join("")}
+    `;
+  }
   </script>
 </body>
 </html>
